# fastapi-vue3-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  bun.lockb  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
app/: __init__.py
app/configs/: inertia_dependency.py
app/database/: __init__.py  init.py  utils.py
app/models/: __init__.py  base.py  product.py
app/routes/: __init__.py  demo.py  index.py  product.py
app/schemas/: __init__.py  base.py  product.py
docs/: 0.Overview.md  1.Architecture.md  2.API.md  3.Frontend.md  4.Deployment.md  5.Development.md
frontend/: App.vue  main.js
frontend/components/: ProductList.vue
frontend/pages/: Index.vue
frontend/pages/Products/: Create.vue  Detail.vue  Edit.vue  Index.vue
frontend/services/: api.js
templates/: index.html
templates/assets/: index-BJmKuM0y.css  index-C4ETgA_r.js  index-Delz8kjg.js  index-DrnjQTZz.js  index-DuWx9E-b.css
