[project]
name = "fastapi-vue3-sample"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sunzh231", email = "sunzh231@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
test = "python ./backend/services/test.py"
