[project]
name = "fastapi-vue3-sample"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  {name = "sunzh231", email = "sunzh231@gmail.com"},
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "mcp-agent>=0.0.17",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.0",
  "fastapi-inertia>=1.0.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
